[package]
edition = "2021"
name = "lsp-client"
version = "0.1.0"
authors = ["Keyv Chan"]
repository = "https://github.com/keyvchan/lsp-tester"
description = "Generic LSP client scaffold."

[dependencies]
log = "0.4.3"
serde_json = "1.0.34"
serde = { version = "1.0.83", features = ["derive"] }
crossbeam-channel = "0.5.4"
lsp-types = "0.93.0"
